---------------------------------------------------------------

Changes in Go4 v4.4.3 (Winter 2011)
1. Implement proper Ctrl-C handler for Windows platform
2. Fix several problems with settings savings. There is 
   known issue with dockable widgets (http://bugreports.qt.nokia.com/browse/QTBUG-16252),
   therefore qt4.7.0 and 4.7.1 has a problem to correctly restore browser/logger position. 

Changes in Go4 v4.4.2 (October 2010)
1. Fix analysis crash when autosave file cannot be created in specified locations. 
2. Add handling of event timeout exception to analysis, running in batch mode.
   Prevents unexpectable break of analysis due to low data rate.
3. Improve Ctrl-C handling in analysis, which runs under gui control.
   Now after first Ctrl-C analysis will try normally finish event loop and exit.
   After second Ctrl-C it tries immediately store autosave file and exit.
   All consequent Ctrl-C will just terminate analysis.
4. Add in go4analysis event source exception handling, 
   display more info with MBS source errors.
5. Small fixes in fitpanel - info pad displays FWHM of the line, 
   list of models in wizard is navigated correctly
6. Solve problem that after loading of user library, classes from it was not 
   available automatically to the gui. Now one again can use custom histogram
   classes in the gui if appropriate library is loaded.
7. Support of new RFIO v6.0.
8. Check with gcc 4.5.0
9. Fix error with user source example under Windows.
10. Added possibility that output event of first analysis step can be declared as MbsEvent and
    just save the incoming mbs event into ROOT tree without copying the data: 
    added method TGo4MbsEvent::AssignReference() allows to use TGo4MbsEvent as a "reference" to another 
    TGo4MbsEvent; added constructor TGo4MbsEvent(const char*) to use it with standard factory
11. Bugfix in TGo4MbsEvent: memory leak in subevent array when reading back from TTree