@@ -7,7 +7,9 @@ win32: TARGET = libGo4UserGui
 
 win32: LIBS += $(GO4BINDIR)/go4.lib libCore.lib
 
-win32: QMAKE_LFLAGS += /defaultlib:msvcrt
+win32:QMAKE_LFLAGS  += /nodefaultlib:msvcrt msvcrt.lib
+
+win32:QMAKE_CXXFLAGS += -MD
 
 macx: QMAKE_LFLAGS +=  -undefined dynamic_lookup
 
