@@ -25,6 +25,7 @@ Changes in Go4 v4.4.3 (Winter 2011)
 2. Fix several problems with settings savings. There is 
    known issue with dockable widgets (http://bugreports.qt.nokia.com/browse/QTBUG-16252),
    therefore qt4.7.0 and 4.7.1 has a problem to correctly restore browser/logger position. 
+3. Adjust to Miscrosoft Visual Studio 2010.
 
 Changes in Go4 v4.4.2 (October 2010)
 1. Fix analysis crash when autosave file cannot be created in specified locations. 
